fix(material/chips): icon cut off when text-spacing is increased (#30867)

--- a/src/material/chips/chip.scss
+++ b/src/material/chips/chip.scss
@@ -740,3 +740,10 @@ $token-slots: m2-chip.get-token-slots();
 .mat-mdc-chip-action:focus .mat-focus-indicator::before {
   content: '';
 }
+
+// Prevents icon from being cut off when text spacing is increased.
+// .mat-mdc-chip-remove selector necessary for remove button with icon.
+// Fixes b/250063405.
+.mdc-evolution-chip__icon, .mat-mdc-chip-remove .mat-icon {
+  min-height: fit-content;
+}
